--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "scripts": {
     "lint": "eslint src --ext ts,tsx",
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
-  },
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"  },
   "devDependencies": {
     "@babel/cli": "^7.12.17",
     "@babel/core": "^7.12.17",
@@ -24,8 +22,8 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/nodemailer": "^6.4.0",
-    "@types/uuid": "^8.3.0",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -38,6 +36,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "aws-sdk": "^2.846.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -46,13 +45,14 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.4.18",
-    "tsyringe": "^4.4.0",
-    "uuid": "^8.3.2",
     "openapi-types": "^10.0.0",
+    "path": "^0.12.7",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
-    "typeorm": "^0.2.31"
+    "tsyringe": "^4.4.0",
+    "uuid": "^8.3.2"
   }
 }
